yamls/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appa
  labels:
    app: appa    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appa
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: appa        
    spec:
      containers:
      - name: appa
        # this image contains setup for application insights. Set the APPINSIGHTS_INSTRUMENTATIONKEY correctly.
        # also make sure you use the image from your private registry
        image: dmxacrmaster-microsoft.azurecr.io/debugcontainer:ai
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http         
            protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appb
  labels:
    app: appb 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appb
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: appb        
    spec:
      containers:
      - name: appb
         # this image contains setup for application insights. Set the APPINSIGHTS_INSTRUMENTATIONKEY correctly.
        image: dmxacrmaster-microsoft.azurecr.io/debugcontainer:ai
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http         
            protocol: TCP
        volumeMounts:
              - name: config
                mountPath: "/config"
                readOnly: true
      volumes:        
        - name: config
          configMap:            
            name: game-demo            
            items:
            - key: "game.properties"
              path: "game.properties"
            - key: "user-interface.properties"
              path: "user-interface.properties"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appc  
  labels:
    app: appc    
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appc
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: appc
    spec:
      containers:
      - name: appc
         # this image contains setup for application insights. Set the APPINSIGHTS_INSTRUMENTATIONKEY correctly.
        image: dmxacrmaster-microsoft.azurecr.io/debugcontainer:ai
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http         
            protocol: TCP
