yamls/KubernetesDemo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demofrontend
  labels:
    name: demofrontend
    app: dbg
spec:
  selector:
    name: demofrontend
  type: LoadBalancer
  ports:
   - port: 80
     name: http
     targetPort: 80
     protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demofrontenddpl
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: demofrontend
        app: dbg
    spec:
      containers:
      - name: demofrontend
        image: danielmeixner/dbgcon:2
        ports:
          - containerPort: 80
            name: http         
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: demobackend
  labels:
    name: demobackend
    app: dbg 
spec:
  ports:
  - port: 80
    name: demobackendport
    targetPort: 80
  selector:
    role: demobackend
    app: demobackend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demobackend
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: demobackend
        role: demobackend
        app: demobackend
    spec:
      containers:
      - name: demobackend
        image: danielmeixner/dbgcon:2
        ports:
          - containerPort: 80
            name: http         
            protocol: TCP
